--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -122,14 +122,37 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item active">
-                            <a href="/Admin/Order" class="LoadingDiv">
+
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
                                     <i uk-icon="basket"></i>
                                 </span>
                                 <span class="title">سفارشات</span>
+                                <span class="arrow" uk-icon="chevron-forward">
+                                </span>
                             </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a href="/Admin/Order" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="swap-vertical"></i>
+                                        </span>
+                                        <span class="title">سفارشات سایت</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/OnlineOrder" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="log-in"></i>                                           
+                                        </span>
+                                        <span class="title">سفارشات انلاین</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
+
+
                         <li class="nav-item active">
                             <a href="/Admin/Comment" class="LoadingDiv">
                                 <span class="icon-holder">
@@ -138,12 +161,20 @@
                                 <span class="title">نظرات</span>
                             </a>
                         </li>
-                        
+                        <li class="nav-item active">
+                            <a href="/Admin/Comment" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="person-add"></i>                                    
+                                </span>
+                                <span class="title">کاربران</span>
+                            </a>
+                        </li>
+
 
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="folder-open"></i>                                    
+                                    <i uk-icon="folder-open"></i>
                                 </span>
                                 <span class="title">مدیا</span>
                                 <span class="arrow" uk-icon="chevron-forward">
@@ -169,7 +200,7 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/Ad" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="megaphone"></i>                                
+                                            <i uk-icon="megaphone"></i>
                                         </span>
                                         <span class="title">تبلیغات</span>
                                     </a>
@@ -201,7 +232,7 @@
                                 <span class="title">فروشگاه</span>
                             </a>
                         </li>
-                        
+
                         <li class="nav-item active">
                             <a href="/Admin/Ticket" class="LoadingDiv">
                                 <span class="icon-holder">
