--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -61,16 +61,45 @@
 </div>
 
 <div class="comment-section mat-card">
-    <h3>نظرات کاربران</h3>
+    <h3 class="uk-margin-bottom">نظرات کاربران</h3>
     <ul>
         <li>
-            <partial name="_CommentBlock" />
+            <partial name="_RepliableComment" />
         </li>
         <li>
-            <partial name="_CommentBlock" />
+            <partial name="_RepliableComment" />
         </li>
         <li>
-            <partial name="_CommentBlock" />
+            <partial name="_RepliableComment" />
         </li>
     </ul>
 </div>
+
+<!-- Modal Reply -->
+<div id="ModalReply" uk-modal>
+    <form class="form uk-modal-dialog uk-modal-body">
+        <h3 class="uk-margin-bottom">
+            پاسخ
+        </h3>
+        @*  آیدی کامنتی که بهش پاسخ داریم میدیم رو موقع واز کردن مودال پاس میدم اینتو  *@
+        <input type="hidden" name="ParentId" id="CommentId" />
+        <div class="fg-col">
+            <div class="fg-label">متن پاسخ</div>
+            <textarea class="entry"></textarea>
+            <span class="text-danger"></span>
+        </div>
+        <div class="actions">
+            <button class="btn btn-primary">ثبت</button>
+        </div>
+    </form>
+</div>
+
+<script>
+    function reply(commentId) {
+        // آیدی کامنتی که بهش پاسخ داریم میدیم رو میزارم تو یه اینپوت
+        const input = document.getElementById('CommentId');
+        input.value = commentId;
+
+        UIkit.modal(document.getElementById('ModalReply')).show();
+    }
+</script>
