--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -1548,10 +1548,12 @@ footer {
 .comment-section ul {
   display: flex;
   flex-direction: column;
-  grid-gap: 12px; }
+  grid-gap: 12px;
+  margin-top: 0; }
 
 .comment-section .comment {
   background: #F8F8F8;
+  border: #e9e9e9 1px solid;
   -moz-border-radius: 4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
   border-radius: 4px 4px 4px 4px;
@@ -1578,17 +1580,28 @@ footer {
     margin: 8px 0;
     color: #666;
     font-size: 14px; }
-  .comment-section .comment .actions {
+  .comment-section .comment .action {
     display: flex;
-    flex-direction: row-reverse; }
-    .comment-section .comment .actions a {
-      color: #ccc;
-      -moz-transition: all ease 0.2s;
-      -o-transition: all ease 0.2s;
-      -webkit-transition: all ease 0.2s;
-      transition: all ease 0.2s; }
-    .comment-section .comment .actions a:hover {
-      color: #96027E; }
+    flex-direction: row; }
+  .comment-section .comment .text {
+    display: flex;
+    flex-direction: column; }
+    .comment-section .comment .text .entry {
+      background: #fff; }
+  .comment-section .comment ul {
+    padding-right: 20px;
+    padding-left: 0; }
+    .comment-section .comment ul li .comment {
+      padding: 0;
+      border: 0; }
+      .comment-section .comment ul li .comment .head h5 {
+        font-size: 13px; }
+      .comment-section .comment ul li .comment .head .date {
+        font-size: 11px; }
+      .comment-section .comment ul li .comment p {
+        margin: 6px 0;
+        color: #666;
+        font-size: 13px; }
 
 @media only screen and (max-width: 542px) {
   .comment-section h3 {
