--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -236,18 +236,21 @@ backdrop-filter: saturate(80%);
   grid-template-rows: auto;
   grid-gap: 12px;
   grid-template-columns: repeat(auto-fit, minmax(256px, 1fr)); }
-  .gallery-main a {
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    -ms-align-content: center;
-    -webkit-align-content: center;
-    align-content: center; }
-    .gallery-main a img {
-      margin: auto;
-      width: 100%;
-      height: 100%;
-      -o-object-fit: cover;
-      object-fit: cover;
-      -o-object-position: center;
-      object-position: center; }
+  .gallery-main .albumBlock {
+    max-height: 324px;
+    max-width: 300px; }
+    .gallery-main .albumBlock a {
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      -ms-align-content: center;
+      -webkit-align-content: center;
+      align-content: center; }
+      .gallery-main .albumBlock a img {
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        -o-object-position: center;
+        object-position: center; }
