--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -140,7 +140,7 @@
                 </span>
                 <button class="minus" uk-icon="remove"></button>
             </div>
-            <button class="button">
+            <button class="button" onclick="AddToCart(@Model.ProductId)">
                 <span>افزودن به سبد خرید</span>
                 <span uk-icon="cart"></span>
             </button>
