--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -40,7 +40,7 @@
                     </td>
                     <td class="price">
                         <div class="col">
-                            <label>@item.su</label>
+                            <label>@item.Sum</label>
                         </div>
                     </td>
                 </tr>
