--- a/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ad/Components/Edit.cshtml
@@ -7,31 +7,38 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form asp-action="Edit" asp-controller="Ad" asp-area="Admin" enctype="multipart/form-data">
-    <input type="hidden" asp-for="AdId" />
+<form asp-action="Edit" asp-controller="Ad" asp-area="Admin" enctype="multipart/form-data"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام</label>
                 <input asp-for="Label" class="form-control form-control-sm" placeholder="مثال: ...">
+                <span asp-validation-for="Label" class="text-danger"></span>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-7">
-                <label>ویرایش لینک</label>
+                <label>افزودن لینک</label>
                 <input asp-for="Link" class="form-control form-control-sm" placeholder="...//:https">
-                <span class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="Link"></span>
             </div>
         </div>
-        <label class="mt-2">ویرایش تصویر</label>
+        <label class="mt-2">افزودن تصویر</label>
         <br />
         <div class="custom-file col-md-7">
-            <input asp-for="Image" type="file" class="custom-file-input form-control form-control-sm" onchange="inputChanged(this)">
-            <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
+            <input asp-for="Image" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
+            <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@Model.Image</label>
         </div>
+        <br />
+        <span class="text-success">لطفا همه تصاویر در یک اندازه باشند</span>
     </div>
     <div class="modal-footer justify-content-end">
-        <button type="submit" class="btn btn-success btn-sm text-white">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
+        <button type="submit" class="btn btn-success btn-sm text-white">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
     </div>
 </form>
 <script>
@@ -40,3 +47,5 @@
         sender.parentElement.querySelector('.custom-file-label').innerHTML = fileName;
     }
 </script>
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
