--- a/GhasreMobile/Areas/Admin/Views/Card/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Card/Components/Edit.cshtml
@@ -13,6 +13,7 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
+    <input asp-for="BankAccountId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-lg-6">
