--- a/GhasreMobile/Areas/Admin/Views/Discount/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Discount/Components/Create.cshtml
@@ -18,22 +18,22 @@
             <div class="form-group col-md-6 col-lg-3">
                 <label>نام</label>
                 <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال: noroz1400">
-                <span class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="form-group col-md-6 col-lg-3">
                 <label>چند روز</label>
                 <input name="Till" required type="number" class="form-control form-control-sm" placeholder="مثال: 2">
-                <span class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="ValidTill"></span>
             </div>
             <div class="form-group col-md-6 col-lg-3">
                 <label>درصد تخفیف</label>
                 <input asp-for="Discount" type="number" class="form-control form-control-sm" placeholder="مثال: 30">
-                <span class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="Discount"></span>
             </div>
             <div class="form-group col-md-6 col-lg-3">
                 <label>دفعات استفاده</label>
                 <input asp-for="Count" type="number" class="form-control form-control-sm" placeholder="مثال: 10">
-                <span class="text-danger"></span>
+                <span class="text-danger" asp-validation-for="Count"></span>
             </div>
         </div>
     </div>
