--- a/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
@@ -15,10 +15,10 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2 mr-1 mr-md-0">
-                                    <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="کد تیکت" value="">
+                                    <input id="SearchInputId" class="form-control uk-text-small" type="text" placeholder="کد تیکت" value="">
                                 </div>
                                 <div class="form-group mx-sm-1 mb-2 mr-1 mr-md-0">
-                                    <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="شماره تماس" value="">
+                                    <input id="SearchInputTelNo" class="form-control uk-text-small" type="text" placeholder="شماره تماس" value="">
                                 </div>
                             </div>
                         </div>
@@ -90,3 +90,13 @@
         </div>
     </div>
 </div>
+
+@section Script{
+    <script>
+        function BtnSearch() {
+            var SearchInputId = $("#SearchInputId").val();
+            var SearchInputTelNo = $("#SearchInputTelNo").val();
+            window.location.href = "/Admin/Ticket?page=1&SearchInputId=" + SearchInputId + "&SearchInputTelNo=" + SearchInputTelNo;
+        }
+    </script>
+}
