--- a/GhasreMobile/Areas/User/Views/Cart/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Cart/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ShopCartItemVm>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "سبد خرید";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
