--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -27,64 +27,41 @@
                     </td>
                     <td>
                         <div class="counter">
-                            <button uk-icon="ratio:.6;icon:add-outline"></button>
+                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?command=up'" uk-icon="ratio:.6;icon:add-outline"></button>
                             <label>@item.Count</label>
-                            <button uk-icon="ratio:.6;icon:remove-outline"></button>
+                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?command=down'" uk-icon="ratio:.6;icon:remove-outline"></button>
                         </div>
                     </td>
                     <td class="price">
                         <div class="col">
-                            <label>480,000</label>
-                            <label>360,000</label>
+                            @if (item.PriceAfterDiscount == 0)
+                            {
+                                <label> @item.PriceBeforeDiscount.Value.ToString("#,0")</label>
+                            }
+                            else
+                            {
+                                <label> @item.PriceBeforeDiscount.Value.ToString("#,0")</label>
+                                <label> @item.PriceAfterDiscount.Value.ToString("#,0")</label>
+                            }
+
                         </div>
                     </td>
                     <td class="price">
                         <div class="col">
+                            <label></label>
                             <label>@item.Sum</label>
                         </div>
                     </td>
                 </tr>
 
             }
-            @*<tr>
-                    <td class="img" uk-lightbox>
-                        <a href="~/st/r/phones/p3.jpg">
-                            <img src="~/st/r/phones/p3.jpg" alt="" />
-                        </a>
-                    </td>
-                    <td class="name">
-                        <div class="col">
-                            <h5>گوشی موبایل سامسونگ گلکسی آ هشت 256 گیگ حافظه داخلی</h5>
-                            <a class="link-text" href="">سامسونگ</a>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="counter">
-                            <button uk-icon="ratio:.6;icon:add-outline"></button>
-                            <label>5</label>
-                            <button uk-icon="ratio:.6;icon:remove-outline"></button>
-                        </div>
-                    </td>
-                    <td class="price">
-                        <div class="col">
-                            <label>480,000</label>
-                            <label>360,000</label>
-                        </div>
-                    </td>
-                    <td class="price">
-                        <div class="col">
-                            <label>2,300,000</label>
-                            <label>1,999,999</label>
-                        </div>
-                    </td>
-                </tr>*@
         </tbody>
     </table>
     <div class="finalize">
         <button class="btn btn-primary">نهایی سازی خرید</button>
         <div class="price">
             <h3>
-                8,600,000
+                @Model.Sum(i=>i.Sum).Value.ToString("#,0")
             </h3>
             <span>
                 تومان
