--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -279,7 +279,7 @@
                     <ul>
                         <li>
                             <span>۰۲۱-۴۲۴۰۹۰۰۰</span>
-                        </li> 
+                        </li>
                         <li>
                             <span>تبریز - ولیعصر - سربالایی ولیعصر - خیابان حافظ</span>
                         </li>
@@ -397,9 +397,10 @@
         }
 
         function AddToCart(id) {
-            $.get("/api/Shop/" + id, function (res) {
+            var colorId = $('#ProductColorId').val();
+            $.get("/api/Shop/" + id + "/" + colorId, function (res) {
                 $("#countShopCart").html(res);
-               // updateShopCart();
+                // updateShopCart();
             });
         }
         function updateShopCart() {
