topic, special offer, product changed

--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -120,6 +120,14 @@
                                         <span class="title">تخفیفات</span>
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/SpecialOffer" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="bookmark"></i>
+                                        </span>
+                                        <span class="title">پیشنهاد ویژه</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
 
@@ -144,7 +152,7 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/OnlineOrder" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="log-in"></i>                                           
+                                            <i uk-icon="log-in"></i>
                                         </span>
                                         <span class="title">سفارشات انلاین</span>
                                     </a>
@@ -162,9 +170,9 @@
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a href="/Admin/Comment" class="LoadingDiv">
+                            <a href="/Admin/Client" class="LoadingDiv">
                                 <span class="icon-holder">
-                                    <i uk-icon="person-add"></i>                                    
+                                    <i uk-icon="person-add"></i>
                                 </span>
                                 <span class="title">کاربران</span>
                             </a>
@@ -233,14 +241,36 @@
                             </a>
                         </li>
 
-                        <li class="nav-item active">
-                            <a href="/Admin/Ticket" class="LoadingDiv">
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="headset-outline"></i>
+                                    <i uk-icon="headset-outline"></i>                                    
                                 </span>
-                                <span class="title">مرکز پاسخگویی</span>
+                                <span class="title">پشتیبانی</span>
+                                <span class="arrow" uk-icon="chevron-forward">
+                                </span>
                             </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item active">
+                                    <a href="/Admin/Ticket" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="help-buoy"></i>
+                                        </span>
+                                        <span class="title">مرکز پاسخگویی</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Topic" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="information"></i>
+                                        </span>
+                                        <span class="title">تاپیک</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
+
+                        
                     </ul>
                 </div>
             </div>
