--- a/GhasreMobile/Areas/Admin/Views/Topic/Components/Info.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Topic/Components/Info.cshtml
@@ -12,25 +12,21 @@
         <div class="form-row ">
             <div class="form-group col-md-6">
                 <label>موضوع:</label>
-                <span>سامسونگ</span>
-            </div>
-            <div class="form-group col-md-6">
-                <label>نام کاربری:</label>
-                <span>ali00</span>
-            </div>
+                <span>سامسونگ خراب شده است</span>
+            </div>            
             <div class="form-group col-md-6">
                 <label>تاریخ ثبت:</label>
                 <span>1399</span>
             </div>
             <div class="form-group col-md-6">
                 <label>وضعیت: </label>
-                
-                    <span class="text-success">خوانده شده</span>
-                
-                    <span class="text-warning">خوانده نشده</span>
-                
+
+                <span class="text-success">تایید شده</span>
+
+                <span class="text-warning">تایید نشده</span>
+
             </div>
-            
+
             <div class="form-group col-12">
                 <label>پیام:</label>
                 <div class="bg-light p-3 uk-border-rounded overflow-auto">
