--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -37,6 +37,7 @@
                                 <th>نام محصول</th>
                                 <th>قیمت</th>
                                 <th>تاریخ افزودن</th>
+                                <th>پیشنهاد ویژه</th>
                                 <th>عملیات</th>
                                 <th>وضعیت موجودی</th>
                             </tr>
@@ -58,6 +59,11 @@
                                         }
                                     </td>
                                     <td>@item.DateCreated.Value.AllToShamsi()</td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن به پیشنهاد ویژه">
+                                            <a onclick="SpecialOffer(@item.ProductId)" class="text-primary" data-toggle="modal" data-target="#modalSave" uk-icon="bookmark-outline"></a>
+                                        </span>
+                                    </td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
                                             <a href="/Admin/Product/Edit/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
@@ -97,6 +103,11 @@
 
         function BtnSearch() {
             window.location.href = "/Admin/Product?page=1&Search=" + $("#SearchInput").val();
+        }
+        function SpecialOffer(id) {
+            $.get("/Admin/Product/SpecialOffer/", id, function (result) {
+                $(".modal-content").html(result);
+            });
         }
 
     </script>
