--- a/GhasreMobile/Areas/Admin/Views/Album/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Album/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblAlbum>
 @{
     ViewData["Title"] = "آلبوم";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -8,26 +8,29 @@
     <div class="col-md-12 flex-div pb-3 pt-3">
         <div class="card flex-div border-0 main-shadow">
             <div class="card-header bg-white">
-                
+
             </div>
             <div id="card-table" class="card-body flex-div">
                 <div class="table-responsive flex">
                     <table class="table fixed">
                         <thead class="thead-light">
                             <tr>
-                                <th>نام آلبوم</th>                            
-                                <th>عملیات</th>                            
+                                <th>نام آلبوم</th>
+                                <th>عملیات</th>
                             </tr>
                         </thead>
                         <tbody>
+                            @foreach (var item in Model)
+                            {
                                 <tr>
-                                    <td>آلبوم۱</td>
+                                    <td>@item.Name</td>
                                     <td>
-                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="نمابش">                                            
-                                            <a onclick="Edit()" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="eye-outline"></a>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="نمابش">
+                                            <a onclick="Show(@item.AlbumId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="eye-outline"></a>
                                         </span>
-                                    </td>                                    
-                                </tr>                            
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -35,7 +38,7 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*@await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
@@ -45,7 +48,7 @@
 @section Script{
     <script>
 
-        function Edit(Id) {
+        function Show(Id) {
             $(".modal-content").html("");
             $.get("/Admin/Album/Show/" + Id, function (result) {
                 $(".modal-content").html(result);
