--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -5,6 +5,7 @@
             <tr>
                 <th>عکس</th>
                 <th>نام محصول</th>
+                <th>رنگ </th>
                 <th>تعداد</th>
                 <th>فی</th>
                 <th>قیمت</th>
@@ -15,8 +16,8 @@
             {
                 <tr>
                     <td class="img" uk-lightbox>
-                        <a href="~/st/r/phones/p3.jpg">
-                            <img src="~/st/r/phones/p3.jpg" alt="" />
+                        <a href="~/Images/ProductMain/@item.ImageName">
+                            <img src="~/Images/ProductMain/@item.ImageName" alt="" />
                         </a>
                     </td>
                     <td class="name">
@@ -25,11 +26,16 @@
                             <a class="link-text" href="">@item.Brand</a>
                         </div>
                     </td>
+                    <td class="name">
+                        <div class="col">
+                            <h5>@item.ColorName</h5>
+                        </div>
+                    </td>
                     <td>
                         <div class="counter">
-                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?command=up'" uk-icon="ratio:.6;icon:add-outline"></button>
+                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?colorId=@item.ColorID&&command=up'" uk-icon="ratio:.6;icon:add-outline"></button>
                             <label>@item.Count</label>
-                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?command=down'" uk-icon="ratio:.6;icon:remove-outline"></button>
+                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?colorId=@item.ColorID&&command=down'" uk-icon="ratio:.6;icon:remove-outline"></button>
                         </div>
                     </td>
                     <td class="price">
@@ -49,7 +55,7 @@
                     <td class="price">
                         <div class="col">
                             <label></label>
-                            <label>@item.Sum</label>
+                            <label>@item.Sum.Value.ToString("#,0")</label>
                         </div>
                     </td>
                 </tr>
@@ -61,7 +67,7 @@
         <button class="btn btn-primary">نهایی سازی خرید</button>
         <div class="price">
             <h3>
-                @Model.Sum(i=>i.Sum).Value.ToString("#,0")
+                @Model.Sum(i => i.Sum).Value.ToString("#,0")
             </h3>
             <span>
                 تومان
