--- a/GhasreMobile/Areas/Admin/Views/Notification/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Notification/Index.cshtml
@@ -20,6 +20,9 @@
                         <div class="form-toolbar mr-md-3 mr-1">
                             <button onclick="BtnSearch()" type="button" class="btn btn-primary btn-sm">جستجو<span class="icon-holder uk-margin-small-right" uk-icon="search-outline"></span></button>
                         </div>
+                        <div class="form-group pb-0 mb-0 mr-1 mr-md-3">
+                            <a id="Create" data-toggle="modal" data-target="#modalSave" class="btn btn-success btn-sm text-white"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -71,6 +74,11 @@
     <script>
         $("#Information").click(function () {
             $.get("/Admin/Notification/NotificationInfo", function (result) {
+                $(".modal-content").html(result);
+            });
+        });
+        $("#Create").click(function () {
+            $.get("/Admin/Notification/Create", function (result) {
                 $(".modal-content").html(result);
             });
         });
